--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -35,6 +35,10 @@
         <item>British Pound Notes</item>
         <item>Swedish Krona Coins</item>
         <item>Swedish Krona Notes</item>
+        <item>Russian Ruble Coins</item>
+        <item>Russian Ruble Notes</item>
+        <item>Japanese Yen Coins</item>
+        <item>Japanese Yen Notes</item>
         <item>ISO 216 Paper (A series)</item>
         <item>US Paper</item>
     </string-array>
@@ -47,6 +51,10 @@
         <item>gb-notes</item>
         <item>sek-coins</item>
         <item>sek-notes</item>
+        <item>rub-coins</item>
+        <item>rub-notes</item>
+        <item>jpy-coins</item>
+        <item>jpy-notes</item>
         <item>iso216-paper</item>
         <item>us-paper</item>
     </string-array>
