German translation wave two. Translated missing tags into german. Organized german string file better. Removed non-english array files. Moved units of measurement from array file to the string file. Set default values in the english string file as untranslatable.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,8 +24,14 @@
         <item>inch</item>
         <item>off</item>
     </string-array>
-    <string-array name="pref_uom_entries"><item>SI units</item><item>imperial</item></string-array>
-    <string-array name="pref_uom_evs"><item>mm</item><item>in</item></string-array>
+    <string-array name="pref_uom_entries">
+        <item>@string/units_si</item>
+        <item>@string/units_imperial</item>
+    </string-array>
+    <string-array name="pref_uom_evs">
+        <item>mm</item>
+        <item>in</item>
+    </string-array>
     <string-array name="pref_type_selection_entries">
         <item>@string/category_us_coins</item>
         <item>@string/category_us_notes</item>
