Split camera ruler help text into three parts. The text was too long for one preference tag. Split the text into three tags with empty titles.

--- a/app/src/main/res/xml/help.xml
+++ b/app/src/main/res/xml/help.xml
@@ -13,8 +13,15 @@
         <Preference
             android:selectable="false"
             android:persistent="false"
-            android:title=""
-            android:summary="@string/help_camera_ruler"/>
+            android:summary="@string/help_camera_ruler1"/>
+        <Preference
+            android:selectable="false"
+            android:persistent="false"
+            android:summary="@string/help_camera_ruler2"/>
+        <Preference
+            android:selectable="false"
+            android:persistent="false"
+            android:summary="@string/help_camera_ruler3"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/help_category_options">
