--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:id="@+id/nav_group_main"
-        android:checkableBehavior="all">
+    <group android:checkableBehavior="all">
         <item
             android:id="@+id/nav_ruler"
             android:icon="@drawable/ic_menu_ruler"
@@ -13,8 +12,7 @@
             android:title="@string/action_camera" />
     </group>
 
-    <group android:id="@+id/nav_group_add"
-        android:checkableBehavior="all">
+    <group android:checkableBehavior="all">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
