--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="60dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:layout_height="500px" />
+            android:layout_height="200dp" />
 
         <LinearLayout
             android:orientation="vertical"
