--- a/app/src/main/res/layout/tutorial_slide3.xml
+++ b/app/src/main/res/layout/tutorial_slide3.xml
@@ -21,6 +21,7 @@
             android:textStyle="bold" />
 
         <ImageView
+            android:layout_marginTop="20dp"
             android:layout_width="150dp"
             android:layout_height="@dimen/tutorial_img_width_height"
             android:scaleType="fitCenter"
