--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="all">
+    <group
+        android:id="@+id/nav_group_main"
+        android:checkableBehavior="all">
         <item
             android:id="@+id/nav_ruler"
             android:icon="@drawable/ic_menu_ruler"
@@ -12,7 +14,9 @@
             android:title="@string/action_camera" />
     </group>
 
-    <group android:checkableBehavior="all">
+    <group
+        android:id="@+id/nav_group_manage"
+        android:checkableBehavior="all">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
