--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -42,6 +42,7 @@
             android:text="@string/app_name_long" />
 
         <TextView
+            android:id="@+id/version_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
